--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="header">FANTASIA BBW</div>
         <div class="subheader">BIENVENIDOS A BBW</div>
         <div class="menu">
-            <a href="https://oficial-bbw-sage.vercel.app/"><i class="fa fa-clipboard"></i> INICIO</a>
+            <a href="https://bbwmenuapp.netlify.app/"><i class="fa fa-clipboard"></i> INICIO</a>
             <a href="https://oficial-bbw-register-two.vercel.app/"><i class="fa fa-desktop"></i> REGISTRO</a>
             <a href="https://oficial-bb-login-five.vercel.app/"><i class="fa fa-cogs"></i> LOGIN</a>
             <a href="#"><i class="fa fa-users"></i> CONTACTO</a>
